# cg

./: .gitignore  CMakeList.txt  LICENSE  Makefile  README.md
assignment1/includes/: transforms.h
assignment1/src/: main.c
assignment2/: .gitignore  Makefile  output
assignment2/includes/: invaders.h  scene.h  shapes.h
assignment2/src/: invaders.c  main.c  physics.c  scene.c  shapes.c
assignment3/: Makefile  README.md
assignment3/includes/: camera.h  obj.h  scene.h  settings.h  shapes.h  transforms.h
assignment3/src/: camera.c  main.c  obj.c  objloader-example.c  scene.c  shapes.c  transforms.c
assignment4/: Makefile  ShadowMapping_1.cpp
assignment4/includes/: glsl.h  material.h  obj.h  scene.h  settings.h
assignment4/src/: camera.c  glsl.c  main.c  material.c  obj.c  scene.c  shapes.c
examples/: functions.cpp  primitives.cpp
examples/class1/: exercicio_transformacao1.cpp  testarossa.cpp
examples/class3/: Makefile  cria_um_ponto.cpp  jet.cpp  output  pong_mousemove.cpp  pong_onKeyPressed.cpp
examples/class7/: materials  materials.c
src/: 02-02-ExemploTransformacoes2D.c  colors.cpp  exemplo_mouse.cpp  exercicio_transformacao1.cpp  glpuzzle.c  rotating_triangle.cpp
t1/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  main.cpp  t1.cpp
t1/includes/: physics.h  physics.h.gch  scene.h  settings.h  settings.h.gch  shapes.h  tools.h  tools.h.gch  transforms.h
t1/src/: main.c  main.cpp  physics.c  scene.c  shapes.c  shapes.cpp  t1.cpp  transforms.c  transforms.cpp
(+21 files in other folders)
